@@ -51,6 +51,7 @@ Fixed
 - Fixed crashes when opening an empty URL (e.g. via pasting).
 - Fixed validation of duplicate values in `hints -> chars`.
 - Fixed crash when PDF.js was partially installed.
+- Fixed crash when XDG_DOWNLOAD_DIR was not an absolute path.
 
 v0.5.1
 ------
